fixed white space due to margins

--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -102,7 +102,7 @@ h1{text-align: center;
 
 iframe {clear: both;
 display: block;
-margin: 10px;
+
 width: 100vw;
 height: 250px;
 box-sizing: border-box;
